--- a/quartus-project/Project.qsf
+++ b/quartus-project/Project.qsf
@@ -4,7 +4,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSXFC6D6F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY cell_simulation
+set_global_assignment -name TOP_LEVEL_ENTITY top
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 16.0.2
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "19:26:18 MARCH 21,2022"
@@ -158,6 +158,24 @@ set_global_assignment -name EDA_TEST_BENCH_NAME sim_testbench -section_id eda_si
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id sim_testbench
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME sim_testbench -section_id sim_testbench
 set_global_assignment -name EDA_TEST_BENCH_FILE testbenches/sim_testbench.vhd -section_id sim_testbench
+set_global_assignment -name VHDL_FILE top.vhd
+set_global_assignment -name VHDL_FILE vhdl/clock_div.vhd
+set_global_assignment -name VHDL_FILE vhdl/button_debouncer.vhd
+set_global_assignment -name VHDL_FILE vhdl/button_controller.vhd
+set_global_assignment -name VHDL_FILE testbenches/sim_testbench.vhd
+set_global_assignment -name VHDL_FILE testbenches/counter_testbench.vhd
+set_global_assignment -name VHDL_FILE testbenches/cell_testbench.vhd
+set_global_assignment -name SDC_FILE Project.sdc
+set_global_assignment -name VHDL_FILE vhdl/work/package_types.vhd
+set_global_assignment -name VHDL_FILE vhdl/cell_simulation.vhd
+set_global_assignment -name VHDL_FILE vhdl/package_types.vhd
+set_global_assignment -name VHDL_FILE vhdl/four_bit_counter.vhd
+set_global_assignment -name VHDL_FILE vhdl/eight_bit_counter.vhd
+set_global_assignment -name VHDL_FILE vhdl/flipflop.vhd
+set_global_assignment -name VHDL_FILE vhdl/cell.vhd
+set_global_assignment -name VHDL_FILE Project.vhd
+set_global_assignment -name VHDL_FILE vhdl/full_adder.vhd
+set_global_assignment -name SDC_FILE Project.SDC
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
@@ -257,23 +275,4 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_R[6]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_R[7]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_SYNC_N
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_VS
-set_global_assignment -name VHDL_FILE vhdl/clock_div.vhd
-set_global_assignment -name VHDL_FILE vhdl/button_debouncer.vhd
-set_global_assignment -name VHDL_FILE vhdl/button_controller.vhd
-set_global_assignment -name VHDL_FILE vhdl/block_of_four.vhd
-set_global_assignment -name VHDL_FILE testbenches/sim_testbench.vhd
-set_global_assignment -name VHDL_FILE testbenches/counter_testbench.vhd
-set_global_assignment -name VHDL_FILE testbenches/cell_testbench.vhd
-set_global_assignment -name SDC_FILE Project.sdc
-set_global_assignment -name VHDL_FILE top.vhd
-set_global_assignment -name VHDL_FILE vhdl/work/package_types.vhd
-set_global_assignment -name VHDL_FILE vhdl/cell_simulation.vhd
-set_global_assignment -name VHDL_FILE vhdl/package_types.vhd
-set_global_assignment -name VHDL_FILE vhdl/four_bit_counter.vhd
-set_global_assignment -name VHDL_FILE vhdl/eight_bit_counter.vhd
-set_global_assignment -name VHDL_FILE vhdl/flipflop.vhd
-set_global_assignment -name VHDL_FILE vhdl/cell.vhd
-set_global_assignment -name VHDL_FILE Project.vhd
-set_global_assignment -name VHDL_FILE vhdl/full_adder.vhd
-set_global_assignment -name SDC_FILE Project.SDC
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
