--- a/quartus-project/Project.qsf
+++ b/quartus-project/Project.qsf
@@ -145,7 +145,7 @@ set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH cell_testbench -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH sim_testbench -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME cell_testbench -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id cell_testbench
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME cell_testbench -section_id cell_testbench
@@ -266,9 +266,13 @@ set_global_assignment -name VHDL_FILE vhdl/cell.vhd
 set_global_assignment -name VHDL_FILE Project.vhd
 set_global_assignment -name VHDL_FILE vhdl/full_adder.vhd
 set_global_assignment -name SDC_FILE Project.SDC
+set_global_assignment -name EDA_TEST_BENCH_NAME div_testbench -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id div_testbench
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME div_testbench -section_id div_testbench
 set_global_assignment -name EDA_TEST_BENCH_FILE testbenches/cell_testbench.vhd -section_id cell_testbench
 set_global_assignment -name EDA_TEST_BENCH_FILE testbenches/counter_testbench.vhd -section_id counter_testbench
 set_global_assignment -name EDA_TEST_BENCH_FILE testbenches/sim_testbench.vhd -section_id sim_testbench
+set_global_assignment -name EDA_TEST_BENCH_FILE testbenches/div_testbench.vhd -section_id div_testbench
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
