--- a/quartus-project/de10_vga_ball_sprites/de10_vga_ball.qsf
+++ b/quartus-project/de10_vga_ball_sprites/de10_vga_ball.qsf
@@ -917,6 +917,9 @@ set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[23] -
 set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[24] -to auto_signaltap_0|vcc -section_id auto_signaltap_0
 set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[28] -to auto_signaltap_0|vcc -section_id auto_signaltap_0
 set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_SAMPLE_DEPTH=32768" -section_id auto_signaltap_0
+set_global_assignment -name VHDL_FILE ../vhdl/full_adder.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/four_bit_counter.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/eight_bit_counter.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/work/package_types.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/clock_div.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/cell_simulation.vhd
@@ -928,5 +931,5 @@ set_global_assignment -name QSYS_FILE hps.qsys
 set_global_assignment -name SDC_FILE de10_vga_ball.SDC
 set_global_assignment -name VHDL_FILE de10_vga_ball.vhd
 set_global_assignment -name SIGNALTAP_FILE de10_vgaball_debug.stp
-set_global_assignment -name SLD_FILE db/de10_vgaball_debug_auto_stripped.stp
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SLD_FILE db/de10_vgaball_debug_auto_stripped.stp
